# PP-Schedule-Visualization

./: .gitattributes  .gitignore  Dockerfile  README-dash-visualizer.md  README.md  app.py  dash_visualizer.py  formula.py  main.py  pipeline.py  pyproject.toml  requirements-dash.txt  requirements.txt  visualizer.py
assets/: clientside.js  custom.css
conf/: config.yaml
configs/: standard.json
examples/megatron-lm/: README.md  plot.py
src/: __init__.py  execution_model.py  server.py  strategies.py  visualizer.py
