[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pp-emulation"
version = "0.1.0"
description = "Pipeline Parallelism Emulation and Visualization"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Project Author"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "dash>=2.14.0",
    "hydra-core>=1.3.2",
    "omegaconf>=2.3.0",
    "plotly>=5.18.0",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "tqdm>=4.67.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "mypy>=1.5.1",
]

# Add Hatch configuration to explicitly define where source code is located
[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.sdist]
include = [
    "src",
    "main.py",
    "conf",
    "LICENSE",
    "README.md",
]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest]
testpaths = ["tests"]
pythonpath = ["."] 